--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-source-datocms": "^2.2.4",
     "gatsby-source-filesystem": "^2.1.40",
     "gatsby-transformer-remark": "^2.6.39",
+    "gsap": "^3.5.1",
     "node-sass": "^4.13.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
